[gd_scene load_steps=15 format=2]

[ext_resource path="res://resource/backgroud/milky-way.jpg" type="Texture" id=1]
[ext_resource path="res://player.tscn" type="PackedScene" id=2]
[ext_resource path="res://right_frontier.tscn" type="PackedScene" id=3]
[ext_resource path="res://top_frontier2.tscn" type="PackedScene" id=4]
[ext_resource path="res://world.gd" type="Script" id=5]
[ext_resource path="res://left_frontier.tscn" type="PackedScene" id=6]
[ext_resource path="res://top_frontier.tscn" type="PackedScene" id=7]
[ext_resource path="res://bullet_contact.tscn" type="PackedScene" id=8]
[ext_resource path="res://resource/Sounds/GameSounds/explosion-42132.mp3" type="AudioStream" id=9]
[ext_resource path="res://resource/Sounds/warrior_medium-192841.mp3" type="AudioStream" id=10]
[ext_resource path="res://resource/Sounds/GameSounds/hq-explosion-6288.mp3" type="AudioStream" id=11]
[ext_resource path="res://resource/Sounds/GameSounds/distant-explosion-47562.mp3" type="AudioStream" id=12]
[ext_resource path="res://resource/Sounds/GameSounds/big-boom-202678.mp3" type="AudioStream" id=13]

[sub_resource type="Theme" id=1]

[node name="world" type="Node2D"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 5000.0
margin_bottom = 5000.0
theme = SubResource( 1 )
texture = ExtResource( 1 )

[node name="left_frontier" parent="." instance=ExtResource( 6 )]

[node name="right_frontier" parent="." instance=ExtResource( 3 )]

[node name="top_frontier" parent="." instance=ExtResource( 7 )]

[node name="bottom_frontier" parent="." instance=ExtResource( 4 )]

[node name="player" parent="." instance=ExtResource( 2 )]
position = Vector2( 235, 196 )

[node name="bullet_contact" parent="." instance=ExtResource( 8 )]
pitch_scale = 0.72
attenuation = 215.27

[node name="ship_explotion" type="AudioStreamPlayer2D" parent="."]

[node name="background_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="player_dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="chip_explotion" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="commander_dead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="impact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[connection signal="tree_exited" from="." to="." method="_on_world_tree_exited"]
[connection signal="finished" from="background_sound" to="." method="_on_background_sound_finished"]
[connection signal="finished" from="background_sound" to="." method="_on_warrior_medium_finished"]
